feat: show public version details on login
